infrastructure/istio/habitcentric/habitcentric-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: habitcentric-gateway
  namespace: habitcentric
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "habitcentric.demo"
