infrastructure/istio/habitcentric/habitcentric-routes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: habitcentric-routes
  namespace: istio-system
spec:
  hosts:
  - habitcentric.demo
  gateways:
  - habitcentric-gateway
  http:
  - match:
    - uri:
        prefix: /habits
    route:
    - destination:
        host: habit.hc-habit.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /track
    route:
    - destination:
        host: track.hc-track.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /report
    route:
    - destination:
        host: report.hc-report.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /ui
    route:
    - destination:
        host: ui.hc-ui.svc.cluster.local
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: keycloak-http.hc-keycloak.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    redirect:
      uri: /ui
